# aspect-ratio-resizer

./: README.md  __init__.py  pyproject.toml  test_enhanced_node.py  test_megapixel_reducer.py  test_node.py
.github/workflows/: publish.yml
src/: nodes.py
web/js/: aspectRatioResizer.js
