[project]
name = "aspect-ratio-resizer"
description = "A ComfyUI custom node that resizes images while maintaining aspect ratio."
version = "1.1.1"
authors = [
    { name = "nvmaxx" }
]
license = { file = "LICENSE" }
dependencies = ["torch", "Pillow", "numpy"]
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/nvmax/aspect-ratio-resizer"

[tool.comfy]
PublisherId = "nvmaxx"
DisplayName = "Aspect Ratio Resizer"
Icon = ""
